--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&family=Imperial+Script&family=Lavishly+Yours&display=swap"
-    rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&family=Imperial+Script&family=Lavishly+Yours&family=Tangerine:wght@400;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&family=Imperial+Script&family=Meow+Script&family=Tangerine:wght@400;700&display=swap"
     rel="stylesheet">
   <script src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
   <script src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
